# maomi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: future-extern-fn.md  future-ideas.md  getting-started.md  reference.md
examples/: cnn.mao  grad.mao  linear.mao  map.mao  mlp.mao  mlp_api.py  scan.mao  softmax.mao  structs.mao  train_adam.mao  train_sgd.mao
src/maomi/: __init__.py  ad.py  api.py  ast_nodes.py  builtins.py  cli.py  codegen_relax.py  codegen_stablehlo.py  diagnostic.py  errors.py  iree_runner.py  jax_runner.py  lexer.py  lsp.py  parser.py  render.py  resolver.py  runner_utils.py  tokens.py  tvm_runner.py  type_checker.py  types.py  warnings.py
tests/: lsp_validation.py  test_ad.py  test_ad_numerical.py  test_api.py  test_array_creation.py  test_array_manip.py  test_audit_rename_sig_inlay_call_sel.py  test_code_actions_v2.py  test_codegen.py  test_codegen_relax.py  test_completion_audit.py  test_completion_audit_2.py  test_config_typed_let.py  test_diagnostic.py  test_einsum.py  test_indexing.py  test_lexer.py  test_linalg.py  test_low_hanging_fruit.py  test_lsp.py  test_lsp_audit2_a.py  test_lsp_audit2_b.py  test_lsp_audit2_c.py  test_lsp_audit2_unit1.py  test_lsp_audit2_unit2.py  test_lsp_audit2_unit3.py  test_lsp_audit2_unit4.py  test_lsp_audit2_unit5.py  test_lsp_diagnostics_recovery.py  test_lsp_fix_completions.py  test_lsp_fix_core.py  test_lsp_fix_formatting.py  test_lsp_fix_inlayhints.py  test_lsp_fix_parser.py  test_lsp_fix_references.py  test_lsp_fix_small.py  test_lsp_fix_symbols.py  test_lsp_fix_typechecker.py  test_lsp_fixtures.py  test_lsp_fuzz.py  (+22 more)
tests/fixtures/: embedding.mao  linear.mao  linear_concrete.mao  mlp.mao  relu.mao  relu_grad.mao
(+62 files in other folders)
